<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/refresh_button"
        android:title="@string/refresh"
        app:showAsAction="never"/>
    <item
        android:id="@+id/settings_button"
        android:title="@string/settings"
        app:showAsAction="never"/>
    <item
        android:id="@+id/log_button"
        android:title="@string/log"
        app:showAsAction="never"/>
    <item
        android:id="@+id/clear_log_button"
        android:title="@string/clearLog"
        app:showAsAction="never"/>
    <item
        android:id="@+id/share_button"
        android:title="@string/share"
        app:showAsAction="never"/>
    <item
        android:id="@+id/rate_button"
        android:title="@string/rate"
        app:showAsAction="never"/>
    <item
        android:id="@+id/about_button"
        android:title="@string/about"
        app:showAsAction="never"/>
</menu>